# rayx

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: common.rs  crossover.rs  intersection.rs
src/: base.rs  intersect.rs  lib.rs
tests/: test_agreement.rs
tests/integration_tests/: common.rs  main.rs  test_agreement.rs  test_reconstruct_vertices.rs
tests/test-data/: bun_zipper_res3.stl  bun_zipper_res4.stl
tests/test_data/: bun_zipper_res2.stl  models.md  perfect-suzanne.stl
