[package]
name = "rayx"
version = "0.1.0"
edition = "2024"
documentation = "https://docs.rs/rayx"
homepage = "https://github.com/p-sira/rayx"
repository = "https://github.com/p-sira/rayx"
license = "BSD-3-Clause"
description = "Fast ray intersection using Baldwin-Weber algorithm"

keywords = [
    "raytracing",
    "intersection",
    "geometry",
    "graphics",
    "triangle"
]

categories = [
    "graphics",
    "science::math",
    "game-development",
    "algorithms",
    "no-std"
]

[features]
default = ["std"]
std = ["num-traits/std", "nalgebra/std"]

[dependencies]
num-traits = { version = "0.2", default-features = false }
nalgebra = { version = "0.33", default-features = false, features = ["libm"] }
