[package]
name = "rayx"
version = "0.2.0"
edition = "2024"
documentation = "https://docs.rs/rayx"
homepage = "https://github.com/p-sira/rayx"
repository = "https://github.com/p-sira/rayx"
license = "BSD-3-Clause"
description = "Fast ray intersection using Baldwin-Weber algorithm"

keywords = ["raytracing", "intersection", "geometry", "graphics", "triangle"]

categories = [
    "graphics",
    "mathematics",
    "game-development",
    "algorithms",
    "no-std",
]

include = ["/src", "/LICENSE"]

[features]
default = ["std"]
std = ["num-traits/std", "nalgebra/std"]

[dependencies]
num-traits = { version = "0.2", default-features = false }
nalgebra = { version = "0.34", default-features = false, features = ["libm"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
stl_io = "0.7"

[[bench]]
name = "intersection"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
